tmux for zsh and better nested sessions

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -12,17 +12,20 @@
 set -s escape-time 0
 setw -g mode-keys vi
 set -g history-limit 1000
+set -g display-time 10000 # milliseconds
 
 set -g prefix C-x
 bind -n C-a send-prefix
 
-set-option -g default-shell /bin/bash
+#set -g default-shell /bin/bash
+set -g default-shell /bin/zsh
 
 # when printing pane ids (bind q)
 set -g display-panes-time 4000 # 4 secs
 
 unbind A
 bind A command-prompt "rename-window %%"
+set-option -g allow-rename off
 
 ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ##
 ### ## Buffers
@@ -36,7 +39,7 @@ bind C-v command-prompt "saveb /opt/screen/scbuf.tmp \; loadb /opt/screen/scbuf.
 bind C-c command-prompt "saveb /opt/screen/scbuf.%%"
 
 # Reload configuration
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \;
 
 ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ##
 ## ## Display info
@@ -50,8 +53,8 @@ unbind M-PPage
 unbind M-NPage
 bind -n M-PPage previous-window
 bind -n M-NPage next-window
-bind -n C-Left previous-window
-bind -n C-Right next-window
+#bind -n C-Left previous-window
+#bind -n C-Right next-window
 bind -n C-b previous-window
 bind -n C-n next-window
 # Useful for nested sessions
@@ -59,6 +62,9 @@ unbind n
 unbind b
 bind n next-window
 bind b previous-window
+
+unbind C-p
+bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
 
 unbind M-Up
 unbind M-Down
@@ -115,10 +121,58 @@ bind - last-window \; swap-pane -s tmux-zoom.0 \; kill-window -t tmux-zoom
 ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ##
 ### ## Appearance & themes 
 # Set status bar
-set -g status-bg black
-set -g status-fg yellow #white
-set -g status-left '#[fg=green][#S]#[default]'
-set -g status-right '#[default] #(whoami)@#H#[default] #[fg=green](#(cut -d " " -f 1 /proc/loadavg)) #[fg=yellow]%H:%M#[default]'
+set -g status-left-length 32
+set -g status-right-length 150
+
+set -g status-fg white
+set -g status-bg colour234
+set -g window-status-activity-attr bold
+set -g pane-border-fg colour245
+set -g pane-active-border-fg colour39
+set -g message-fg colour16
+set -g message-bg colour221
+set -g message-attr bold
+
+set -g status-left '#[fg=colour235,bg=colour252,bold]#S#[fg=colour252,bg=colour238,nobold] '
+set -g status-right '#[default] #(whoami)@#H#[default] #[fg=green]V#{version} #[fg=yellow]%H:%M#[default]'
+set -g window-status-format "#[fg=colour234,bg=colour39]#I#[default]-#[fg=white]#W"
+set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold]#I #W#[fg=colour39,bg=colour234,nobold]"
+
 # Highlight active window
-set-window-option -g window-status-current-bg red
+#set-window-option -g window-status-current-bg red
+
+# https://github.com/samoshkin/tmux-config
+# https://github.com/samoshkin/tmux-config/blob/master/tmux/tmux.conf
+
+# Session is considered to be remote when we ssh into host
+#if-shell \
+#    'test -n "$SSH_CLIENT" && test -r ~/.tmux.remote.conf' \
+#	'source-file ~/.tmux.remote.conf'
+
+# We want to have single prefix key "C-a", usable both for local and remote session
+# we don't want to "C-a" + "a" approach either
+# Idea is to turn off all key bindings and prefix handling on local session,
+# so that all keystrokes are passed to inner/remote session
+
+# see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
+
+# Also, change some visual styles when window keys are off
+bind -T root F12  \
+    display-message "Swithing to INNER" \;\
+    set prefix None \;\
+    set key-table off \;\
+	set status-bg blue \;\
+    bind -T off -n C-Left previous-window \;\
+    bind -T off -n C-Right next-window \;\
+    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+    refresh-client -S 
+
+bind -T off F12 \
+  display-message "Swithing to OUTER" \;\
+  set -u prefix \;\
+  set -u key-table \;\
+  set -u status-bg \;\
+  set status-bg black \;\
+  refresh-client -S
+
 
