add tgos alias (enter tmux in choose-tre mode) only use zsh if you can

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -17,8 +17,8 @@ set -g display-time 10000 # milliseconds
 set -g prefix C-x
 bind -n C-a send-prefix
 
-#set -g default-shell /bin/bash
-set -g default-shell /bin/zsh
+# ZSH if you can
+if-shell 'which zsh' 'set -g default-shell /bin/zsh' 'set -g default-shell /bin/bash'
 
 # when printing pane ids (bind q)
 set -g display-panes-time 4000 # 4 secs
