--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -12,7 +12,7 @@
 set -s escape-time 0
 setw -g mode-keys vi
 set -g history-limit 1000
-set -g display-time 10000 # milliseconds
+set -g display-time 8000 # milliseconds
 
 set -g prefix C-x
 bind -n C-a send-prefix
@@ -125,18 +125,20 @@ set -g status-left-length 32
 set -g status-right-length 150
 
 set -g status-fg white
-set -g status-bg colour234
+set -g status-bg black
+
 set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
-set -g message-fg colour16
-set -g message-bg colour221
+set -g pane-border-fg colour245 # grey
+set -g pane-active-border-fg blue
+set -g message-fg black
+set -g message-bg colour208 # orange
 set -g message-attr bold
 
-set -g status-left '#[fg=colour235,bg=colour252,bold]#S#[fg=colour252,bg=colour238,nobold] '
-set -g status-right '#[default] #(whoami)@#H#[default] #[fg=green]V#{version} #[fg=yellow]%H:%M#[default]'
-set -g window-status-format "#[fg=colour234,bg=colour39]#I#[default]-#[fg=white]#W"
-set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour25,bg=colour39,noreverse,bold]#I #W#[fg=colour39,bg=colour234,nobold]"
+set -g status-left '#[fg=white]#S> '
+set -g status-left '#[fg=yellow]#{=12:host} #[fg=white][#[fg=yellow]#S#[fg=white]]#[default] '
+set -g status-right '#[default]#[fg=white] #(whoami)@#H - V#{version} #[fg=yellow]%H:%M#[default]'
+set -g window-status-format "#[fg=white]#[reverse]#I#[noreverse]-#W#[default]"
+set -g window-status-current-format "#[bold,reverse,fg=white]#I #W#[nobold,noreverse]"
 
 # Highlight active window
 #set-window-option -g window-status-current-bg red
@@ -158,21 +160,21 @@ set -g window-status-current-format "#[fg=colour234,bg=colour39]#[fg=colour25,bg
 
 # Also, change some visual styles when window keys are off
 bind -T root F12  \
-    display-message "Swithing to INNER" \;\
-    set prefix None \;\
-    set key-table off \;\
-	set status-bg blue \;\
-    bind -T off -n C-Left previous-window \;\
-    bind -T off -n C-Right next-window \;\
-    if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-    refresh-client -S 
+  set prefix None \;\
+  set key-table off \;\
+  set status-bg black \;\
+  bind -T off -n C-Left previous-window \;\
+  bind -T off -n C-Right next-window \;\
+  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
+  refresh-client -S 
 
+
+  #display-message "Switching to INNER" \;\
+  #display-message "Switching to OUTER" \;\
 bind -T off F12 \
-  display-message "Swithing to OUTER" \;\
   set -u prefix \;\
   set -u key-table \;\
   set -u status-bg \;\
-  set status-bg black \;\
+  set status-bg colour52 \;\
   refresh-client -S
-
 
