--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -8,6 +8,11 @@
 # vim displays reverse video instead of italics, while less displays italics
 #  (or just regular text) instead of reverse. What's wrong?
 #set -g default-terminal "screen-it"
+#
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+run-shell "tmux setenv -g TMUX_SSH_REMOTE \"$(echo $SSH_CLIENT | cut -d ' ' -f1)\" "
+
+#if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
 
 set -s escape-time 0
 setw -g mode-keys vi
@@ -159,22 +164,22 @@ set -g window-status-current-format "#[bold,reverse,fg=white]#I #W#[nobold,norev
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 
 # Also, change some visual styles when window keys are off
-bind -T root F12  \
+if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
+'bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
   set status-bg black \;\
   bind -T off -n C-Left previous-window \;\
   bind -T off -n C-Right next-window \;\
-  if -F '#{pane_in_mode}' 'send-keys -X cancel' \;\
-  refresh-client -S 
+  if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
+  refresh-client -S'
 
-
-  #display-message "Switching to INNER" \;\
-  #display-message "Switching to OUTER" \;\
-bind -T off F12 \
+if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
+'bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
   set -u status-bg \;\
   set status-bg colour52 \;\
-  refresh-client -S
+  refresh-client -S'
 
+display-message "TMUX_VERSION: '$TMUX_VERSION' - Is Remote: $TMUX_SSH_REMOTE"
