comment in _.tmux.conf

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -163,6 +163,8 @@ set -g window-status-current-format "#[bold,reverse,fg=white]#I #W#[nobold,norev
 
 # see: toggle on/off all keybindings · Issue #237 · tmux/tmux - https://github.com/tmux/tmux/issues/237
 
+# %if ... %elif ... %endif -> not available in tmux 1.9
+
 # Also, change some visual styles when window keys are off
 if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
 'bind -T root F12  \
