tmux conf update

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -11,8 +11,7 @@
 #
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 run-shell "tmux setenv -g TMUX_SSH_REMOTE \"$(echo $SSH_CLIENT | cut -d ' ' -f1)\" "
-
-#if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
+if-shell 'test -n "$TMUX_SSH_REMOTE"' 'setenv TMUX_SSH_REMOTE_DISP " #[fg=yellow][$TMUX_SSH_REMOTE]#[default]"'
 
 set -s escape-time 0
 setw -g mode-keys vi
@@ -36,12 +35,12 @@ set-option -g allow-rename off
 ### ## Buffers
 bind  u copy-mode 
 bind  i paste-buffer -s \015 
-bind  < loadb /tmp/screen-exchange
-bind  > saveb /tmp/screen-exchange
+bind  > loadb /tmp/screen-exchange
+bind  < saveb /tmp/screen-exchange
 
 #paste-buffer
-bind C-v command-prompt "saveb /opt/screen/scbuf.tmp \; loadb /opt/screen/scbuf.%% \; paste-buffer \; loadb /opt/screen/scbuf.tmp "
-bind C-c command-prompt "saveb /opt/screen/scbuf.%%"
+#bind C-v command-prompt "saveb /opt/screen/scbuf.tmp \; loadb /opt/screen/scbuf.%% \; paste-buffer \; loadb /opt/screen/scbuf.tmp "
+#bind C-c command-prompt "saveb /opt/screen/scbuf.%%"
 
 # Reload configuration
 bind r source-file ~/.tmux.conf \;
@@ -141,7 +140,7 @@ set -g message-attr bold
 
 set -g status-left '#[fg=white]#S> '
 set -g status-left '#[fg=yellow]#{=12:host} #[fg=white][#[fg=yellow]#S#[fg=white]]#[default] '
-set -g status-right '#[default]#[fg=white] #(whoami)@#H - V#{version} #[fg=yellow]%H:%M#[default]'
+set -g status-right '#[default]#[fg=white] #(whoami)@#H -#{TMUX_SSH_REMOTE_DISP} V#{TMUX_VERSION} #[fg=yellow]%H:%M#[default]'
 set -g window-status-format "#[fg=white]#[reverse]#I#[noreverse]-#W#[default]"
 set -g window-status-current-format "#[bold,reverse,fg=white]#I #W#[nobold,noreverse]"
 
@@ -183,5 +182,3 @@ if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
   set -u status-bg \;\
   set status-bg colour52 \;\
   refresh-client -S'
-
-display-message "TMUX_VERSION: '$TMUX_VERSION' - Is Remote: $TMUX_SSH_REMOTE"
