--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -11,7 +11,7 @@
 #
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
 run-shell "tmux setenv -g TMUX_SSH_REMOTE \"$(echo $SSH_CLIENT | cut -d ' ' -f1)\" "
-if-shell 'test -n "$TMUX_SSH_REMOTE"' 'setenv TMUX_SSH_REMOTE_DISP " #[fg=yellow][$TMUX_SSH_REMOTE]#[default]"'
+if-shell 'test -n "$TMUX_SSH_REMOTE"' 'setenv -g TMUX_SSH_REMOTE_DISP " #[fg=yellow][$TMUX_SSH_REMOTE]#[default]"'
 
 set -s escape-time 0
 setw -g mode-keys vi
