new shortcut to split-window + keep current path

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -43,7 +43,7 @@ bind  < saveb /tmp/screen-exchange
 #bind C-c command-prompt "saveb /opt/screen/scbuf.%%"
 
 # Reload configuration
-bind r source-file ~/.tmux.conf \;
+bind r source-file ~/.tmux.conf \; display-message "Tmux conf reloaded"
 
 ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ##
 ## ## Display info
@@ -68,7 +68,9 @@ bind n next-window
 bind b previous-window
 
 unbind C-p
+unbind C-P
 bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
+bind C-P display-message "#{pane_current_path}" \; split-window -c "#{pane_current_path}" -h
 
 unbind M-Up
 unbind M-Down
