improve shortcuts wrt current directory path

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -69,10 +69,12 @@ unbind b
 bind n next-window
 bind b previous-window
 
+# Split window (h or v) directly in current directory
+unbind C-o
+bind C-o command-prompt -p "Split Direction (v/h):"  "split-window -c '#{pane_current_path}' -%%"
+# Copy current directory path into buffer
 unbind C-p
-unbind C-P
 bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
-bind C-P display-message "#{pane_current_path}" \; split-window -c "#{pane_current_path}" -h
 
 unbind M-Up
 unbind M-Down
