Add markup for Zoomed windows New shortcut for new window created directly in current directory

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -72,6 +72,8 @@ bind b previous-window
 # Split window (h or v) directly in current directory
 unbind C-o
 bind C-o command-prompt -p "Split Direction (v/h):"  "split-window -c '#{pane_current_path}' -%%"
+unbind C-c
+bind C-c new-window -c '#{pane_current_path}'
 # Copy current directory path into buffer
 unbind C-p
 bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
@@ -147,8 +149,8 @@ set -g message-attr bold
 set -g status-left '#[fg=white]#S> '
 set -g status-left '#[fg=yellow]#{=12:host} #[fg=white][#[fg=yellow]#S#[fg=white]]#[default] '
 set -g status-right '#[default]#[fg=white] #(whoami)@#H -#{TMUX_SSH_REMOTE_DISP} V#{TMUX_VERSION} #[fg=yellow]%H:%M#[default]'
-set -g window-status-format "#[fg=white]#[reverse]#I#[noreverse]-#W#[default]"
-set -g window-status-current-format "#[bold,reverse,fg=white]#I #W#[nobold,noreverse]"
+set -g window-status-format "#[fg=white]#[reverse]#I#{?window_zoomed_flag,^#[noreverse],#[noreverse]-}#W#[default]"
+set -g window-status-current-format '#[bold,reverse,fg=white]#I#{?window_zoomed_flag,^, }#W#[nobold,noreverse]'
 
 # Highlight active window
 #set-window-option -g window-status-current-bg red
