simpler join-pane commands

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -105,8 +105,8 @@ bind -n M-- resize-pane -D 1
 bind -n M-+ resize-pane -U 1
 #
 # pane movement
-bind j command-prompt -p "join pane from:"  "join-pane -s '%%'"
-bind J command-prompt -p "send pane to:"  "join-pane -t '%%'"
+bind j join-pane
+bind J command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
 unbind k
 bind k confirm-before "kill-window"
