--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -11,9 +11,10 @@
 #
 
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+if-shell '[ "$(echo ${TMUX_VERSION} < 2.1 | bc)" = 1 ]' 'setenv -g TMUX_VERSION_OLD "true"' 'setenv -g TMUX_VERSION_OLD "false"'
 run-shell "tmux setenv -g TMUX_SSH_REMOTE \"$(echo $SSH_CONNECTION | cut -d ' ' -f1)\""
 if-shell 'test -n "$TMUX_SSH_REMOTE"' 'setenv -g TMUX_SSH_REMOTE_DISP " #[fg=yellow][$TMUX_SSH_REMOTE]#[default]"'
-#display-message  "[$TMUX_SSH_REMOTE][$TMUX_SSH_REMOTE_DISP][$TMUX_VERSION]"
+bind v display-message  "[$TMUX_SSH_REMOTE][$TMUX_VERSION][old:$TMUX_VERSION_OLD]"
 
 set -s escape-time 0
 setw -g mode-keys vi
@@ -173,7 +174,7 @@ set -g window-status-current-format '#[bold,reverse,fg=white]#I#{?window_zoomed_
 # %if ... %elif ... %endif -> not available in tmux 1.9
 
 # Also, change some visual styles when window keys are off
-if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
+if-shell -b '[ "$TMUX_VERSION_OLD" = "true" ]' \
 'bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
@@ -183,7 +184,7 @@ if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
   if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
   refresh-client -S'
 
-if-shell -b '[ "$(echo "$TMUX_VERSION > 2.1" | bc)" = 1 ]' \
+if-shell -b '[ "$TMUX_VERSION_OLD" = "true" ]' \
 'bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
