better status line

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -150,8 +150,19 @@ set -g message-attr bold
 set -g status-left '#[fg=white]#S> '
 set -g status-left '#[fg=yellow]#{=12:host} #[fg=white][#[fg=yellow]#S#[fg=white]]#[default] '
 set -g status-right '#[default]#[fg=white] #(whoami)@#H -#{TMUX_SSH_REMOTE_DISP} V#{TMUX_VERSION} #[fg=yellow]%H:%M#[default]'
-set -g window-status-format "#[fg=white]#[reverse]#I#{?window_zoomed_flag,^#[noreverse],#[noreverse]-}#W#[default]"
-set -g window-status-current-format '#[bold,reverse,fg=white]#I#{?window_zoomed_flag,^, }#W#[nobold,noreverse]'
+
+# window_flags           #F       Window flags
+#     Symbol    Meaning
+#     *         Denotes the current window.
+#     -         Marks the last window (previously selected).
+#     #         Window is monitored and activity has been detected.
+#     !         A bell has occurred in the window.
+#     ~         The window has been silent for the monitor-silence interval.
+#     M         The window contains the marked pane.
+#     Z         The window's active pane is zoomed.
+
+set -g window-status-format "#[fg=white]#[reverse]#I#F#[noreverse]/#W#[default]"
+set -g window-status-current-format '#[bold,reverse,fg=white]#I#F/#W#[nobold,noreverse]'
 
 # Highlight active window
 #set-window-option -g window-status-current-bg red
