better support for tmux v<2.1

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -11,7 +11,7 @@
 #
 
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
-if-shell '[ "$(echo ${TMUX_VERSION} < 2.1 | bc)" = 1 ]' 'setenv -g TMUX_VERSION_OLD "true"' 'setenv -g TMUX_VERSION_OLD "false"'
+if-shell '$(echo "${TMUX_VERSION} < 2.1" | bc | grep -q 1)' 'setenv -g TMUX_VERSION_OLD "true"' 'setenv -g TMUX_VERSION_OLD "false"'
 run-shell "tmux setenv -g TMUX_SSH_REMOTE \"$(echo $SSH_CONNECTION | cut -d ' ' -f1)\""
 if-shell 'test -n "$TMUX_SSH_REMOTE"' 'setenv -g TMUX_SSH_REMOTE_DISP " #[fg=yellow][$TMUX_SSH_REMOTE]#[default]"'
 bind v display-message  "[remote:$TMUX_SSH_REMOTE][version:$TMUX_VERSION][old:$TMUX_VERSION_OLD]"
@@ -74,7 +74,8 @@ bind b previous-window
 unbind C-o
 bind C-o command-prompt -p "Split Direction (v/h):"  "split-window -c '#{pane_current_path}' -%%"
 unbind C-c
-bind C-c new-window -c '#{pane_current_path}'
+# new-window -c not available in tmux v1.6
+if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' \ "bind C-c new-window -c '#{pane_current_path}'"
 # Copy current directory path into buffer
 unbind C-p
 bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
@@ -185,7 +186,7 @@ set -g window-status-current-format '#[bold,reverse,fg=white]#I#F/#W#[nobold,nor
 # %if ... %elif ... %endif -> not available in tmux 1.9
 
 # Also, change some visual styles when window keys are off
-if-shell -b '[ "$TMUX_VERSION_OLD" != "true" ]' \
+if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' \
 'bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
@@ -195,7 +196,7 @@ if-shell -b '[ "$TMUX_VERSION_OLD" != "true" ]' \
   if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
   refresh-client -S'
 
-if-shell -b '[ "$TMUX_VERSION_OLD" != "true" ]' \
+if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' \
 'bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
