remove lost backslash

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -75,7 +75,7 @@ unbind C-o
 bind C-o command-prompt -p "Split Direction (v/h):"  "split-window -c '#{pane_current_path}' -%%"
 unbind C-c
 # new-window -c not available in tmux v1.6
-if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' \ "bind C-c new-window -c '#{pane_current_path}'"
+if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' "bind C-c new-window -c '#{pane_current_path}'"
 # Copy current directory path into buffer
 unbind C-p
 bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
