change split-window shortcuts

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -71,7 +71,9 @@ bind n next-window
 bind b previous-window
 
 # Split window (h or v) directly in current directory
+unbind o
 unbind C-o
+bind o split-window -c '#{pane_current_path}' -h
 bind C-o command-prompt -p "Split Direction (v/h):"  "split-window -c '#{pane_current_path}' -%%"
 unbind C-c
 # new-window -c not available in tmux v1.6
