copy current path command

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -80,7 +80,7 @@ unbind C-c
 if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' "bind C-c new-window -c '#{pane_current_path}'"
 # Copy current directory path into buffer
 unbind C-p
-bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \"#{pane_current_path}\"'
+bind C-p display-message "#{pane_current_path}" \; run 'tmux set-buffer \""#{pane_current_path}"\"'
 
 unbind M-Up
 unbind M-Down
