--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -164,8 +164,8 @@ set -g status-right '#[default]#[fg=white] #(whoami)@#H -#{TMUX_SSH_REMOTE_DISP}
 #     M         The window contains the marked pane.
 #     Z         The window's active pane is zoomed.
 
-set -g window-status-format "#[fg=white]#[reverse]#I#F#[noreverse]/#W#[default]"
-set -g window-status-current-format '#[bold,reverse,fg=white]#I#F/#W#[nobold,noreverse]'
+set -g window-status-format "#[fg=white]#[bold]#I#F#[nobold]|#W#[default]"
+set -g window-status-current-format "#[bold,reverse,fg=white]#I#F#[nobold]|#W#[noreverse]"
 
 # Highlight active window
 #set-window-option -g window-status-current-bg red
