Add tmux windows swap shortcuts

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -69,6 +69,9 @@ unbind n
 unbind b
 bind n next-window
 bind b previous-window
+bind -n M-b swap-window -t -1
+bind -n M-n swap-window -t +1
+bind C-M swap-window
 
 # Split window (h or v) directly in current directory
 unbind o
@@ -107,7 +110,7 @@ bind -n M-< resize-pane -L 1
 bind -n M-> resize-pane -R 1
 bind -n M-- resize-pane -D 1
 bind -n M-+ resize-pane -U 1
-#
+
 # pane movement
 bind j join-pane
 bind J command-prompt -p "join pane from:"  "join-pane -s '%%'"
