fix shortcut for gihub master version

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -191,20 +191,18 @@ set -g window-status-current-format "#[bold,reverse,fg=white]#I#F#[nobold]|#W#[n
 # %if ... %elif ... %endif -> not available in tmux 1.9
 
 # Also, change some visual styles when window keys are off
-if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' \
-'bind -T root F12  \
+bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
   set status-bg colour017 \;\
   bind -T off -n C-Left previous-window \;\
   bind -T off -n C-Right next-window \;\
   if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
-  refresh-client -S'
+  refresh-client -S
 
-if-shell '[ "$TMUX_VERSION_OLD" != "true" ]' \
-'bind -T off F12 \
+bind -T off F12 \
   set -u prefix \;\
   set -u key-table \;\
   set -u status-bg \;\
   set status-bg black \;\
-  refresh-client -S'
+  refresh-client -S
