--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -1,6 +1,5 @@
 #set-option -g visual-bell on
 #set-option -g bell-action any
-#setw -g mode-mouse on
 #set -g mouse-select-pane on
 #setw -g automatic-rename
 
@@ -35,7 +34,7 @@ set-option -g allow-rename off
 
 ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ## ##
 ### ## Buffers
-bind  u copy-mode 
+bind  u copy-mode -ue
 bind  i paste-buffer -s \015 
 bind  > loadb /tmp/screen-exchange
 bind  < saveb /tmp/screen-exchange
@@ -171,6 +170,7 @@ bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
   set status-bg colour017 \;\
+  bind -T off -n C-Up new-window  \;\
   bind -T off -n C-Left previous-window \;\
   bind -T off -n C-Right next-window \;\
   if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
