tmux: add bind -n C-Down switch-client -l

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -166,6 +166,7 @@ set -g window-status-current-format "#[bold,reverse,fg=white]#I#F#[nobold]|#W#[n
 # %if ... %elif ... %endif -> not available in tmux 1.9
 
 # Also, change some visual styles when window keys are off
+bind -n C-Down switch-client -l
 bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
@@ -173,6 +174,7 @@ bind -T root F12  \
   bind -T off -n C-Up new-window  \;\
   bind -T off -n C-Left previous-window \;\
   bind -T off -n C-Right next-window \;\
+  bind -T off -n C-Down switch-client -l \;\
   if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
   refresh-client -S
 
