Tmux conf: added choose-tree shortcuts

--- a/conf/_.tmux.conf
+++ b/conf/_.tmux.conf
@@ -167,6 +167,7 @@ set -g window-status-current-format "#[bold,reverse,fg=white]#I#F#[nobold]|#W#[n
 
 # Also, change some visual styles when window keys are off
 bind -n C-Down switch-client -l
+bind -n C-S-Down choose-tree -s
 bind -T root F12  \
   set prefix None \;\
   set key-table off \;\
@@ -175,6 +176,7 @@ bind -T root F12  \
   bind -T off -n C-Left previous-window \;\
   bind -T off -n C-Right next-window \;\
   bind -T off -n C-Down switch-client -l \;\
+  bind -T off -n C-S-Down choose-tree -s \;\
   if -F "#{pane_in_mode}" "send-keys -X cancel" \;\
   refresh-client -S
 
